// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcModal should have the ec-modal--lg class 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content ec-modal--lg"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should not render close button if set to false 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <!---->
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should not render help link 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should not render negative button if slot not passed 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should not render positive button if slot not passed 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should not render the modal 1`] = `<!---->`;

exports[`EcModal should render basic modal 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    >
      <p>
        Before we can process your application we need you to upload your management accounts. You can do this now or leave it for later.
      </p>
    </main>
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should render close button 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should render help link when showHelpLink is set to true 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <div
        class="ec-modal__help-link ec-has-tooltip"
        data-original-title="null"
      >
        <svg
          class="ec-mr--8 ec-icon"
          height="18"
          width="18"
        >
          <use
            xlink:href="#ec-simple-help"
          />
        </svg>
        
        Need help?
      
      </div>
       
      <!---->
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should render negative button if slot is passed 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <button
        class="ec-modal__negative-btn ec-btn ec-btn--md ec-btn--secondary ec-btn--rounded ec-push-right"
      >
        Skip for now
      </button>
       
      <!---->
    </footer>
  </div>
</div>
`;

exports[`EcModal should render positive button if slot is passed 1`] = `
<div
  class="ec-modal"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
    >
       
      <svg
        class="ec-modal__close ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </header>
     
    <main
      class="ec-modal__main"
    />
     
    <footer
      class="ec-modal__footer"
    >
      <!---->
       
      <!---->
       
      <button
        class="ec-modal__positive-btn ec-btn ec-btn--md ec-btn--primary ec-btn--rounded ec-push-right"
      >
        Update management accounts
      </button>
    </footer>
  </div>
</div>
`;
